Move API routes to the /api/ namespace
