# Gatekeeper/Controllers/UsersController.cs
@@ -6,7 +6,7 @@ using System.Threading.Tasks;
 
 namespace Gatekeeper.Controllers
 {
-    [Route("/[controller]")]
+    [Route("/api/[controller]")]
     [ApiController]
     public class UsersController : ControllerBase
     {
